--- a/assets/src/scss/layout/admin/admin-style.scss
+++ b/assets/src/scss/layout/admin/admin-style.scss
@@ -3530,10 +3530,10 @@ input.atbdp-form-control {
         }
       }
 
-      .theme-action {
+      .templatiq-action {
         margin: -8px -6px;
 
-        .theme-action-btn {
+        .templatiq-action-btn {
           border-radius: 20px;
           background-color: #f4f5f7 !important;
           font-size: 14px;
@@ -3647,10 +3647,10 @@ input.atbdp-form-control {
       color: #272b41 !important;
     }
 
-    .theme-action {
+    .templatiq-action {
       margin: -8px -6px;
 
-      .theme-action-btn {
+      .templatiq-action-btn {
         line-height: 40px;
         display: inline-block;
         padding: 0 20px;
